Fix spacing around about image

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -175,6 +175,9 @@ section#about-me {
   #self-portrait {
     margin: 20px;
   }
+  #small-self-portrait {
+    margin: 20px 0;
+  }
   h4 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
